# RustWaterSim

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  Trunk.toml  analysis.ipynb  analysis.py  build.rs
assets/write_up/: main.md
crash_water/: Cargo.toml
crash_water/src/: main.rs
debug_container/: Dockerfile  exec.sh  requirements.txt  run.sh  test.py
game_plugin/: Cargo.toml
game_plugin/src/: actions.rs  brush.rs  file_save.rs  game_menu.rs  gui.rs  input.rs  lib.rs  loading.rs  markdown.rs  menu.rs  mission.rs  player.rs  sandbox.rs  water.rs
game_plugin/src/markdown/: page.rs
game_plugin/src/mission/: gui.rs  mission_list.rs
game_plugin/src/water/: aabb.rs  finite_solver.rs  my_solver.rs  new_solver.rs  uv_show.rs
grid/: Cargo.toml
grid/src/: debug_buffer.rs  lib.rs  vector.rs
launchers/native/: Cargo.toml
launchers/native/src/: main.rs
launchers/wasm/: Cargo.toml  index.html
launchers/wasm/src/: main.rs
py_watersim/: Cargo.toml  py_explore.py  pyproject.toml  stack  test.py
py_watersim/src/: lib.rs
src/: main.rs
water_sim/: Cargo.toml
water_sim/src/: aabb.rs  aabb_tree.rs  finite_solver.rs  lib.rs  pipe_solver.rs  source.rs  vector.rs
water_sim_bench/: Cargo.toml
water_sim_bench/src/: main.rs
website template/: main.md
