[package]
name = "bevy_game" # ToDo
version = "0.1.0"
publish = false
authors = ["Niklas Eicker <git@nikl.me>"] # ToDo: you are the author ;)
edition = "2021"

#[profile.dev.package."*"]
#opt-level = 3
#
#[profile.dev]
#opt-level = 1
#
#[profile.release]
#lto = true
#codegen-units = 1
#opt-level="s"


[dependencies]
bevy = { version = "0.8.1" }
winit = "0.26.1"
game_plugin = { path = "game_plugin" }

